# dentify

./: README.md  main.py  predict.py  pyproject.toml  train.py
configs/: train_configs.yaml
scripts/: draw_annotation.py
src/dentify/utils/: coco.py  training_yaml.py
